--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^11.2.0",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
+    "react-datepicker": "^8.0.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
