--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^7.1.3",
     "react-tabs": "^6.1.0",
     "swiper": "^11.2.1"
